--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/zumrun270/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://qq112.gqaew.ml/grrvwqdhq/c7h" rel="nofollow">大纪元</a> | <a href="https://qq112.gqaew.ml/grrvwqdhq/f513i" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://qq112.gqaew.ml/grrvwqdhq/i8u" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://qq112.gqaew.ml/grrvwqdhq/g4w" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://qq112.gqaew.ml/grrvwqdhq/f11y" rel="nofollow">看中国</a> | <a href="https://qq112.gqaew.ml/grrvwqdhq/l3o" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://qq112.gqaew.ml/grrvwqdhq/r9n" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://qq112.gqaew.ml/grrvwqdhq/b5v" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/zumrun270/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zumrun270/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zumrun270/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://qq112.gqaew.ml/lznai/i7x" rel="nofollow">大纪元</a> | <a href="https://qq112.gqaew.ml/lznai/y513k" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://qq112.gqaew.ml/lznai/p8n" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://qq112.gqaew.ml/lznai/e4r" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://qq112.gqaew.ml/lznai/e11z" rel="nofollow">看中国</a> | <a href="https://qq112.gqaew.ml/lznai/x3u" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://qq112.gqaew.ml/lznai/y9c" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://qq112.gqaew.ml/lznai/h5e" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115131.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QA6X7-1-320x200.jpg"><p align="center">欧盟外交政策负责人：中共试图分裂欧洲</p></a>
 <a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115131.md#1" title="欧盟外交政策负责人：中共试图分裂欧洲""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1QA6X7-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/14/n12108041.md#1" title="中共卫健委为人传人辩解 隐瞒3事实露破绽""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1213060777-600x400-3-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12113707.md#1" title="【一线采访】舒兰书记被免 更多疫情细节曝光""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/aac42fc2f187642a16e694527e030e3b-320x200.png">&nbsp;</a>
 <a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12113566.md#1" title="美官员：未保证台积电可向华为出售美技术""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/10/cfa9d2b7efcdd7121f3fcd63100c23a5-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/zumrun270/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://zumrun270.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115302.md#1">驻英大使声称欢迎国际调查 中共再示软？</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12113370.md#1">【最新疫情5·17】川普：对贸易协议略失兴趣</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115099.md#1">辽宁抚顺中石油化工厂爆炸起火 疑遭雷击</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115144.md#1">对台湾赞不绝口 黄秋生：我的兄弟也要移民了</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115138.md#1">【一线采访】武汉全员核酸检测 当局自打脸</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115226.md#1">欧美民间人士就疫情十问崔天凯 加议员转发</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12113370.md#1">【最新疫情5·17】川普：对贸易协议略失兴趣</a><br>
+:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115092.md#1">【新闻看点】病毒有眼睛：联合国的红色背景</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115302.md#1">驻英大使声称欢迎国际调查 中共再示软？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115099.md#1">辽宁抚顺中石油化工厂爆炸起火 疑遭雷击</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115144.md#1">对台湾赞不绝口 黄秋生：我的兄弟也要移民了</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/16/n12115138.md#1">【一线采访】武汉全员核酸检测 当局自打脸</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12113099.md#1">川普称可切断“美中关系” 赵立坚软化回应</a><br>
 <a href="https://github.com/zumrun270/djy/blob/master/gb/20/5/15/n12112161.md#1">四川公民转传一张图片 引来国保二次上门</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 356,216,360 人
+!共 356,218,212 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
